2010-12-21  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh, build_deb.sh, build_rpm.sh: Small fixes to build scripts.
	
	* build_windows_agent.sh: Added to respository. Windows agent build script.

2010-11-08  Sancho Lerena <slerena@artica.es>

	* build_src.sh: Removed NT4 from the unix src package.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Set the build in the InstallJammer mpi
	  file.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed the regular expression that matches
	  the InstallVersion token.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update the InstallJammer mpi file.

2010-09-22  Sancho Lerena <slerena@artica.es>

	* extras/build_src.sh
	extras/build_rpm.sh: Fixed scripts for my enviroment (SUSE 11.3)

2010-06-02  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed parameter check. Make sure
	  develop_bypass is set to 1.

2010-05-24  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Added to repository. Script to
	  automatically update Pandora FMS version and build where
	  necessary.

2010-05-21  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Get the right version for the keygen.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh, build_deb.sh, build_rpm.sh: Added to repository. 
	  Sancho's newest build scripts.
	
	* build_rpm_packages.sh: Removed from repository. Old build script.

2009-12-18 Sancho lerena <slerena@gmail.com>

	* extras/aditional_rpmspec/xprobe2-0.3.spec: Updated to make it
	compatible with SUSE build service.

	* extras/aditional_rpmspec/wmic-4.0.0tp4-SVN-build-UNKNOWN.spec: Final
	changes (updated web, license and description).

2009-12-09  Sancho Lerena <slerena@gmail.com>

	* * aditional_rpmspec/xprobe2-0.3.spec: Fixed parameter to avoid FHS
	enforcing on SUSE Build Service.

2009-12-08   Sancho lerena <slerena@gmail.com>

	* aditional_sources: Added directory to put there sources of